# openworld-game

./: CMakeLists.txt  TODO.md
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.cpp  camera.hh
src/entity/: CMakeLists.txt  entity.cpp  entity.hh
src/font/: CMakeLists.txt  font.cpp  font.hh
src/map/: CMakeLists.txt  map.cpp  map.hh
src/player/: CMakeLists.txt  player.cpp  player.hh
src/sdl/: cleanup.cpp  cleanup.hh  common.hh  events.cpp  events.hh  init.cpp  init.hh  iterate.cpp  iterate.hh  render.cpp  render.hh  update.cpp  update.hh
src/utils/: CMakeLists.txt  utils.cpp  utils.hh
tiled/: dungeon.json  dungeon.tmx  overworld.json  overworld.tmx  overworld2.json  overworld2.tmx  topdown.tiled-openworld.tiled-session
